--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -10,8 +10,9 @@
             "ancestorId": "04t4P000002fPn4QAE"
         }
     ],
+    "namespace": "summit",
     "sfdcLoginUrl": "https://login.salesforce.com",
-    "sourceApiVersion": "51.0",
+    "sourceApiVersion": "52.0",
     "packageAliases": {
         "Summit Events App": "0Ho4P000000fxYiSAI",
         "Summit Events App@0.4.0-1": "04t4P000002T5ZCQA0",
