update to site unpackaged with namespace

--- a/cumulusci.yml
+++ b/cumulusci.yml
@@ -20,7 +20,7 @@ tasks:
             unmanaged: True
 
     create_fake_school_data:
-        description: Makes fake account data to mimic schools with Educaiton as industry
+        description: Makes fake account data to mimic schools with Education as industry
         class_path: cumulusci.tasks.bulkdata.snowfakery.Snowfakery
         options:
             recipe: datasets/snowfackery/school_recipe.yml
