--- a/unpackaged/config/site/package.xml
+++ b/unpackaged/config/site/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>%%%NAMESPACE%%%Summit_Events</members>
+        <members>Summit_Events</members>
         <name>CustomSite</name>
     </types>
     <version>56.0</version>
