--- a/cumulusci.yml
+++ b/cumulusci.yml
@@ -38,7 +38,7 @@ tasks:
         options:
             namespace_inject: $project_config.project__package__namespace
             apex: >
-                Site mySite = [SELECT Id FROM Site WHERE Name = '%%%NAMESPACE%%%Summit_Events'];
+                Site mySite = [SELECT Id FROM Site WHERE Name = 'Summit_Events'];
                 SiteDetail mySiteDetail = [SELECT SecureURL FROM SiteDetail WHERE DurableId = :mySite.Id];
                 String url = mySiteDetail.SecureURL;
                 %%%NAMESPACE%%%Summit_Events_Settings__c eventSettings = %%%NAMESPACE%%%Summit_Events_Settings__c.getOrgDefaults();
