--- a/cumulusci.yml
+++ b/cumulusci.yml
@@ -29,7 +29,7 @@ tasks:
         class_path: cumulusci.tasks.salesforce.Deploy
         options:
             namespace_inject: $project_config.project__package__namespace
-            path: unpackaged/config/sharing
+            path: unpackaged/config/%%%NAMESPACE%%%sharing
 
     deploy_site_settings:
         description: Setup the Custom Settings for the Event Site
