--- a/cumulusci.yml
+++ b/cumulusci.yml
@@ -29,7 +29,14 @@ tasks:
         class_path: cumulusci.tasks.salesforce.Deploy
         options:
             namespace_inject: $project_config.project__package__namespace
-            path: unpackaged/config/%%%NAMESPACE%%%sharing
+            path: unpackaged/config/sharing
+
+    deploy_namespaced_guest_sharing_rules:
+        description: Deploys configuration for Development.
+        class_path: cumulusci.tasks.salesforce.Deploy
+        options:
+            namespace_inject: $project_config.project__package__namespace
+            path: unpackaged/config/sharing
 
     deploy_site_settings:
         description: Setup the Custom Settings for the Event Site
