--- a/cumulusci.yml
+++ b/cumulusci.yml
@@ -181,7 +181,13 @@ plans:
 
 orgs:
     scratch:
+
         dev_namespaced:
             config_file: orgs/namespaced.json
             days: 7
             namespaced: true
+
+        dev:
+            config_file: orgs/educloud.json
+            days: 7
+            namespaced: false
