consolidated and optimized duplicate matching class

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,10 @@ out
 
 # CumulusCI
 /test_results.*
+
+# Added by Illuminated Cloud
+.localdev/
+target/
+node_modules/
+**/tsconfig*.json
+**/*.tsbuildinfo
