--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,6 @@
 .sf
 /src.orig
 /src
-.sf
 
 # Python
 *.pyc
@@ -28,8 +27,15 @@ robot/SummitEventsApp/results/
 IlluminatedCloud
 .IlluminatedCloud
 out
-.idea
 *.iml
 
 # CumulusCI
 /test_results.*
+
+# Added by Illuminated Cloud
+.localdev/
+target/
+node_modules/
+/.illuminatedCloud/
+**/tsconfig*.json
+**/*.tsbuildinfo
